--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="5TR-Nj-Kev">
             <objects>
                 <tableViewController storyboardIdentifier="FCPublicationDetailsTVC" id="D9e-pN-89Q" customClass="FCPublicationDetailsTVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="W65-he-Gdg">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="116" sectionHeaderHeight="22" sectionFooterHeight="22" id="W65-he-Gdg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -22,7 +22,7 @@
                                     <userGuides>
                                         <userLayoutGuide location="592" affinity="minX"/>
                                         <userLayoutGuide location="83" affinity="minY"/>
-                                        <userLayoutGuide location="49" affinity="minY"/>
+                                        <userLayoutGuide location="48" affinity="minY"/>
                                         <userLayoutGuide location="86" affinity="minX"/>
                                     </userGuides>
                                     <subviews>
@@ -178,13 +178,132 @@
                                     <outlet property="titleLabel" destination="B1j-HE-hwb" id="BA3-dR-pCP"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="FCPublicationsDetailsTVReportsCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="FCPublicationsDetailsTVReportsCell" id="a52-V6-pQP">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="FCPublicationsDetailsTVReportsCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="reportsCell" rowHeight="100" id="a52-V6-pQP" customClass="FCPublicationDetailsTVReportsCell" customModule="FoodCollector" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a52-V6-pQP" id="ogf-TB-H5B">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="BEw-Yc-zY6">
+                                            <rect key="frame" x="0.0" y="8" width="600" height="150"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="150" id="1Ay-o8-1Xq"/>
+                                            </constraints>
+                                            <prototypes>
+                                                <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="singleReportCell" rowHeight="44" id="fCl-Bd-i1Z" customClass="FCPublicationSingleReportCell" customModule="FoodCollector" customModuleProvider="target">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fCl-Bd-i1Z" id="12z-8H-cDY">
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kk7-De-Qo2">
+                                                                <rect key="frame" x="392" y="14" width="200" height="21"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="21" id="1cU-hE-lpw"/>
+                                                                    <constraint firstAttribute="height" constant="21" id="9b9-ca-MEx"/>
+                                                                    <constraint firstAttribute="width" constant="200" id="Z4e-2v-edK"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="c0N-N2-NU6"/>
+                                                                    <constraint firstAttribute="height" constant="21" id="ozi-cx-DUT"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="8"/>
+                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                                <variation key="default">
+                                                                    <mask key="constraints">
+                                                                        <exclude reference="1cU-hE-lpw"/>
+                                                                        <exclude reference="9b9-ca-MEx"/>
+                                                                        <exclude reference="c0N-N2-NU6"/>
+                                                                    </mask>
+                                                                </variation>
+                                                            </label>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OW5-c0-a8V">
+                                                                <rect key="frame" x="41" y="4" width="18" height="30"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="OW5-c0-a8V" secondAttribute="height" multiplier="3:5" id="7wI-TD-Exw"/>
+                                                                    <constraint firstAttribute="width" constant="18" id="SH3-Ea-vFL"/>
+                                                                    <constraint firstAttribute="height" constant="30" id="aRg-dM-Okn"/>
+                                                                </constraints>
+                                                                <variation key="default">
+                                                                    <mask key="constraints">
+                                                                        <exclude reference="7wI-TD-Exw"/>
+                                                                    </mask>
+                                                                </variation>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oeS-S7-D5z">
+                                                                <rect key="frame" x="392" y="0.0" width="200" height="21"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="21" id="9bC-V4-xEA"/>
+                                                                    <constraint firstAttribute="height" constant="21" id="L56-9T-5db"/>
+                                                                    <constraint firstAttribute="width" constant="200" id="fKU-Jl-Uj2"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                                <variation key="default">
+                                                                    <mask key="constraints">
+                                                                        <exclude reference="L56-9T-5db"/>
+                                                                    </mask>
+                                                                </variation>
+                                                            </label>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="Kk7-De-Qo2" firstAttribute="trailing" secondItem="12z-8H-cDY" secondAttribute="trailingMargin" id="3Cs-Gr-b8K"/>
+                                                            <constraint firstAttribute="bottomMargin" secondItem="oeS-S7-D5z" secondAttribute="bottom" constant="15" id="AAl-Td-82F"/>
+                                                            <constraint firstItem="Kk7-De-Qo2" firstAttribute="top" secondItem="oeS-S7-D5z" secondAttribute="bottom" constant="-7" id="GOO-tM-i0f"/>
+                                                            <constraint firstItem="oeS-S7-D5z" firstAttribute="top" secondItem="12z-8H-cDY" secondAttribute="topMargin" constant="-6" id="HZH-Rr-VJB"/>
+                                                            <constraint firstAttribute="trailingMargin" secondItem="Kk7-De-Qo2" secondAttribute="trailing" id="JVL-8G-tzo"/>
+                                                            <constraint firstItem="OW5-c0-a8V" firstAttribute="top" secondItem="12z-8H-cDY" secondAttribute="topMargin" constant="-4" id="K05-Xy-bgl"/>
+                                                            <constraint firstItem="oeS-S7-D5z" firstAttribute="top" secondItem="12z-8H-cDY" secondAttribute="topMargin" id="KRU-ow-tJs"/>
+                                                            <constraint firstAttribute="trailingMargin" secondItem="oeS-S7-D5z" secondAttribute="trailing" id="RNI-9k-RBA"/>
+                                                            <constraint firstAttribute="bottomMargin" secondItem="Kk7-De-Qo2" secondAttribute="bottom" constant="-1" id="SKu-e5-kLh"/>
+                                                            <constraint firstItem="OW5-c0-a8V" firstAttribute="leading" secondItem="12z-8H-cDY" secondAttribute="leadingMargin" constant="33" id="Szp-N2-KKu"/>
+                                                            <constraint firstItem="Kk7-De-Qo2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OW5-c0-a8V" secondAttribute="trailing" constant="10" id="Uf2-JU-LMH"/>
+                                                            <constraint firstItem="OW5-c0-a8V" firstAttribute="top" secondItem="12z-8H-cDY" secondAttribute="topMargin" constant="-4" id="VGP-FE-Uaa"/>
+                                                            <constraint firstItem="oeS-S7-D5z" firstAttribute="top" secondItem="12z-8H-cDY" secondAttribute="top" id="Zs3-Vo-u2i"/>
+                                                            <constraint firstItem="oeS-S7-D5z" firstAttribute="leading" secondItem="OW5-c0-a8V" secondAttribute="trailing" constant="491" id="u4o-Qb-YXw"/>
+                                                            <constraint firstAttribute="bottomMargin" secondItem="OW5-c0-a8V" secondAttribute="bottom" constant="2" id="vMt-sg-S4b"/>
+                                                            <constraint firstItem="oeS-S7-D5z" firstAttribute="trailing" secondItem="12z-8H-cDY" secondAttribute="trailingMargin" constant="10" id="zdy-Am-SjC"/>
+                                                        </constraints>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="VGP-FE-Uaa"/>
+                                                                <exclude reference="vMt-sg-S4b"/>
+                                                                <exclude reference="AAl-Td-82F"/>
+                                                                <exclude reference="HZH-Rr-VJB"/>
+                                                                <exclude reference="KRU-ow-tJs"/>
+                                                                <exclude reference="u4o-Qb-YXw"/>
+                                                                <exclude reference="zdy-Am-SjC"/>
+                                                                <exclude reference="3Cs-Gr-b8K"/>
+                                                                <exclude reference="SKu-e5-kLh"/>
+                                                                <exclude reference="Uf2-JU-LMH"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </tableViewCellContentView>
+                                                    <connections>
+                                                        <outlet property="reportDate" destination="Kk7-De-Qo2" id="dxH-vj-sB7"/>
+                                                        <outlet property="reportIcon" destination="OW5-c0-a8V" id="tCb-wA-c3e"/>
+                                                        <outlet property="reportLabel" destination="oeS-S7-D5z" id="UQN-sd-4Vc"/>
+                                                    </connections>
+                                                </tableViewCell>
+                                            </prototypes>
+                                            <sections/>
+                                            <connections>
+                                                <outlet property="dataSource" destination="D9e-pN-89Q" id="QK9-rh-TTu"/>
+                                                <outlet property="delegate" destination="D9e-pN-89Q" id="DFo-qr-c70"/>
+                                            </connections>
+                                        </tableView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" relation="lessThanOrEqual" secondItem="BEw-Yc-zY6" secondAttribute="bottom" constant="-67" id="3pp-aF-sRb"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="BEw-Yc-zY6" secondAttribute="trailing" constant="-8" id="5oU-Lj-CXG"/>
+                                        <constraint firstItem="BEw-Yc-zY6" firstAttribute="leading" secondItem="ogf-TB-H5B" secondAttribute="leadingMargin" constant="-8" id="FEr-rr-eyy"/>
+                                        <constraint firstItem="BEw-Yc-zY6" firstAttribute="top" secondItem="ogf-TB-H5B" secondAttribute="topMargin" id="T0l-e7-8Tg"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="tableView" destination="BEw-Yc-zY6" id="Mio-JH-9Pa"/>
+                                </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="FCPublicationsDetailsTVTitleCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="FCPublicationsDetailsTVPhotoCell" id="aGN-Uz-n91">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FCPublicationsDetailsTVPhotoCell" id="aGN-Uz-n91">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aGN-Uz-n91" id="MeU-0E-Rd7">
                                     <autoresizingMask key="autoresizingMask"/>
